feat(main): animation追加

--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -1,3 +1,5 @@
 <div class="wrapper">
   <canvas #rendererCanvas></canvas>
+  <button (click)="mainService.rotate()">on</button>
+  <button (click)="mainService.rotateOff()">off</button>
 </div>
